cmake_minimum_required(VERSION 3.10)
project(template)

set(CMAKE_BUILD_TYPE "Release")
set(CMAKE_CXX_FLAGS "-std=c++14")
set(CMAKE_CXX_FLAGS_RELEASE "-O3 -Wall -g")
add_executable(KMP src/KMP.cpp)
add_executable(queue src/queue.cpp)
add_executable(Monotonic_queue src/Monotonic_queue.cpp)
add_executable(ST src/ST.cpp)
add_executable(TreeArray src/TreeArray.cpp)
add_executable(SegmentTree src/SegmentTree.cpp)
add_executable(Hash   src/Hash.cpp)
add_executable(Heap src/Heap.cpp)
add_executable(StringHash src/StringHash.cpp)
