cmake_minimum_required(VERSION 3.10)
project(template)

set(CMAKE_BUILD_TYPE "Release")
set(CMAKE_CXX_FLAGS "-std=c++14")
set(CMAKE_CXX_FLAGS_RELEASE "-O3 -Wall -g")
add_executable(KMP src/KMP.cpp)
add_executable(queue src/queue.cpp)
add_executable(Monotonic_queue src/Monotonic_queue.cpp)
add_executable(ST src/ST.cpp)
add_executable(TreeArray src/TreeArray.cpp)
add_executable(SegmentTree src/SegmentTree.cpp)
add_executable(Hash   src/Hash.cpp)
add_executable(Heap src/Heap.cpp)
add_executable(StringHash src/StringHash.cpp)
add_executable(KDtree src/KDTree.cpp)
add_executable(LinkList src/LinkList.cpp)
add_executable(QuickSort   src/Sort/QuickSort.cpp)
add_executable(MergeSort   src/Sort/MergeSort.cpp)
add_executable(CountingSort   src/Sort/CountingSort.cpp )
add_executable(InsertSort  src/Sort/InsertSort.cpp)
add_executable(KMeans       src/KMeans.cpp)
add_executable(BinTree      src/BinTree.cpp)
add_executable(GaussNewton  src/Gauss_Newton.cpp)
add_executable(Ransac_Line          src/Ransac_Line.cpp)
add_executable(SparseMatrix         src/SparseMatrix.cpp)     
add_executable(SharedPtr            src/SharedPtr.cpp)
add_executable(BSTree               src/BSTree.cpp)
add_executable(pow                  src/pow.cpp)    
add_executable(AVLTree              src/AVLTree.cpp) 